--- a/app/battle_for_rokugan.qrc
+++ b/app/battle_for_rokugan.qrc
@@ -1,4 +1,5 @@
 <RCC>
-    <qresource prefix="/trinn_app">
+    <qresource prefix="/bfr">
+        <file>resource/rules.txt</file>
     </qresource>
 </RCC>
